--- a/BR-MS/RepoManage.html
+++ b/BR-MS/RepoManage.html
@@ -46,7 +46,12 @@
         </el-form-item>
         <el-form-item>
             <el-button type="primary" @click="search">查找</el-button>
-            <el-button>返回</el-button>
+            <el-button @click="()=>{
+                for(var i in queryParams){
+                    queryParams[i]='';
+                };
+                search();
+            }">返回</el-button>
         </el-form-item>
     </el-form>
     <el-table :data="repoData.repoInfo">
@@ -235,11 +240,13 @@
         post('/system/get_warehouse', searchKey ? searchKey : {
             "pageSize": pageSize,
             "pageNum": page
-        }, (data, errid) => {
-            if (errid) {
-                if(errid)
-                app.$alert('数据拉取失败');
+        }, (data, err) => {
+            if (err) {
+                app.$message.error(err.msg);
                 app.initializing = false;
+                if(err.id===post.NOT_LOGIN){
+                    window.location.href='login.html';
+                }
                 return;
             }
             var warehouses = data.warehouses;
@@ -324,11 +331,13 @@
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         this.loading = true;
-                        post('/system/update_warehouse', app.editedForm, (data, errid) => {
-                            if (errid) {
-                                console.log(errid);
-                                app.$message.error('修改失败');
-                                app.loading = false;
+                        post('/system/update_warehouse', app.editedForm, (data, err) => {
+                            if (err) {
+                                app.$message.error('修改失败'+err.msg);
+                                app.initializing = false;
+                                if(err.id===post.NOT_LOGIN){
+                                    window.location.href='login.html';
+                                }
                                 return;
                             }
                             this.$message({
@@ -340,7 +349,7 @@
                             app.dialogVisible = false;
                         });
                     } else {
-                        this.$alert('信息错误，请重新填写');
+                        this.$message.error('信息错误，请重新填写');
                         return false;
                     }
                 });
@@ -349,11 +358,13 @@
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         this.loading = true;
-                        post('/system/add_warehouse', app.addForm, (data, errid) => {
-                            if (errid) {
-                                console.log(errid);
-                                app.$message.error('添加失败');
-                                app.loading = false;
+                        post('/system/add_warehouse', app.addForm, (data, err) => {
+                            if (err) {
+                                app.$message.error('添加失败'+err.msg);
+                                app.initializing = false;
+                                if(err.id===post.NOT_LOGIN){
+                                    window.location.href='login.html';
+                                }
                                 return;
                             }
                             this.$message({
@@ -365,7 +376,7 @@
                             app.addDialogVisible = false;
                         });
                     } else {
-                        this.$alert('信息错误，请重新填写');
+                        this.$message.error('信息错误，请重新填写');
                         return false;
                     }
                 });
@@ -378,9 +389,13 @@
                 }).then(() => {
                     post('/system/del_warehouse', {
                         "warehouse_id": id_toDel
-                    }, (data, errid) => {
-                        if (errid) {
-                            this.$message.error('删除失败');
+                    }, (data, err) => {
+                        if (err) {
+                            app.$message.error('删除失败'+err.msg);
+                            app.initializing = false;
+                            if(err.id===post.NOT_LOGIN){
+                                window.location.href='login.html';
+                            }
                             return;
                         }
                         this.$message({
