--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -115,7 +115,8 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
-    var urlPrefix=require('/mods/backend').url;
+    // var urlPrefix=require('/mods/backend').url;
+    var urlPrefix='http://10.112.128.63:8080/dispatch';
     var app = new Vue({
         el: '#app',
         data: function () {
